Fixes bug causing margin over games on mobile
- Removes excess margin that appears in mobile view.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,7 +8,6 @@ $form-title-font: #616161;
 $button-color: #d3d3d3;
 $gameboard-elements: #000;
 
-
 body {
   background-color: $background-color;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
@@ -33,11 +32,10 @@ main {
 }
 
 .game-area {
-  margin: auto;
-  margin-bottom: 20px;
-  max-height:60vh;
+  margin: auto auto;
+  max-height: 60vh;
   max-width: 60vh;
-  width: 60%
+  width: 60%;
 }
 
 .cell {
@@ -56,16 +54,19 @@ main {
 .game-board {
   display: flex;
   flex-wrap: wrap;
-   > div {
+
+  > div {
     border-bottom: 1px solid;
     border-right: 1px solid;
     width: calc(100%/3);
-     &:nth-child(3n){
-       border-right: 0;
-     }
-     &:nth-last-child(-1n + 3){
+
+    &:nth-child(3n) {
+      border-right: 0;
+    }
+
+    &:nth-last-child(-1n + 3) {
       border-bottom: 0;
-     }
+    }
   }
 }
 
